# MPTT-Hierarchical-Data-

./: README.md  db.sqlite3  pyproject.toml
MPTT/: settings.py  urls.py
app/: admin.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20200612_2010.py
app/templates/: index.html
